--- a/week2/style/style.css
+++ b/week2/style/style.css
@@ -28,13 +28,12 @@
 
 }
 .container{
-
+   width: 100%;
 }
 div.x {
 	
 	background-color: #A5A5A5;
 	border: 1px solid black;
-	margin:0px;
   box-sizing: border-box;
 
 }
@@ -59,7 +58,8 @@ p{ padding-top: 25px;
     width: 25%;
   }
   .col-lg-4 {
-  	width: 33.33%;
+    margin: 1%;
+  	width: 31.33%;
 
   }
   .col-lg-5 {
@@ -110,7 +110,8 @@ p{ padding-top: 25px;
     width: 41.66%;
   }
   .col-md-6 {
-  	width: 50%;
+    margin: 1%;
+  	width: 48%;
   }
   .col-md-7 {
     width: 58.33%;
@@ -128,7 +129,8 @@ p{ padding-top: 25px;
     width: 91.66%;
   }
   .col-md-12 {
-  	width: 100%;
+    margin: 1%;
+  	width: 98%;
   }
 }
 @media (max-width:767px ) {
@@ -170,7 +172,8 @@ p{ padding-top: 25px;
     width: 91.66%;
   }
   .col-sm-12 {
-  	width: 100%;
+    margin: 1%;
+  	width: 98%;
   }
 }
 
